로그인 기능

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,16 @@
 </head>
 <body>
   <h1>Hello Express</h1>
+  
+  <table>
+    <thead>
+      <tr>
+      <td>Long URL</td>
+      <td>Short URL</td>
+      </tr>
+    </thead>
+    
+  </table>
+
 </body>
 </html>
