--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,15 @@
       <td>Short URL</td>
       </tr>
     </thead>
-    
+    <tbody>
+      <!--data 객체안에서 item<데이타의 인덱스 번호> 인자로 받아 각 요소를 순회하며 프로퍼티 값을 가져옴-->
+      <% data.forEach( item => { %>
+        <tr>
+          <td><%= item.longUrl%></td>
+          <td><a href="/<%= item.id %>" target="_blank"><%= item.id %></a></td>
+        </tr>
+      <% }) %>
+    </tbody>
   </table>
 
 </body>
