--- a/public/index.css
+++ b/public/index.css
@@ -2,3 +2,10 @@ body{
   background-color: blue;
   color: white;
 }
+  a:link,
+  a:visited,
+  a:hover,
+  a:active {
+    color: white;
+    text-decoration: none;
+  } 
