form 문제 해결 및 빈 input 값 해결!!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,11 @@
 </head>
 <body>
   <h1>Hello Express</h1>
+
+  <form action="/" method="post">
+    <input type="url" name="longUrl">
+    <input type="submit" value="전송">
+  </form>
   
   <table>
     <thead>
